register,verify user & notification template in progress
